--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,5 +3,5 @@ python-dateutil~=2.9.0
 ovos-utils>=0.0.38, <1.0.0
 ovos_workshop>=0.0.15, <3.0.0
 ovos_bus_client>=0.0.6, <1.0.0
-ovos-lingua-franca~=0.0, >=0.4.7
+ovos-number-parser>=0.0.1,<1.0.0
 ovos-mark1-utils~=0.0.0a2
