--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,4 +3,4 @@ ovos-utils>=0.0.38, <1.0.0
 ovos_workshop>=0.0.15, <4.0.0
 ovos_bus_client>=0.0.6, <2.0.0
 ovos-number-parser>=0.0.1,<1.0.0
-ovos-mark1-utils~=0.0.0a2
+ovos-mark1-utils~=0.0.1
